@@ -872,6 +872,8 @@ Please choose a different name.',
 'youremail'                  => 'E-mail:',
 'username'                   => 'Username:',
 'uid'                        => 'User ID:',
+'prefs-memberingroups'       => 'Member of {{PLURAL:$1|group|groups}}:',
+'prefs-changemembership'     => 'Change group membership',
 'yourrealname'               => 'Real name:',
 'yourlanguage'               => 'Language:',
 'yourvariant'                => 'Variant:', # only translate this message to other languages if you have to change it
